Added Trip Creation form to user profile. Rearranged progress bar to fix some errors on page

--- a/SendMe/Views/Shared/_Upload.cshtml
+++ b/SendMe/Views/Shared/_Upload.cshtml
@@ -27,7 +27,7 @@
             </p>
             <p>
                 <button type="submit" id="ppUpload" class="btn btn-toolbar btn-success">
-                    <span class="glyphicon glyphicon-check"></span>
+                    <span class="glyphicon glyphicon-save"></span>
                 </button>
             </p>
         </div>
@@ -60,7 +60,7 @@ else if (ViewBag.Type == "School")
             </p>
             <p>
                 <button type="submit" id="scUpload" class="btn btn-toolbar btn-success">
-                    <span class="glyphicon glyphicon-check"></span>
+                    <span class="glyphicon glyphicon-save"></span>
                 </button>
             </p>
         </div>
@@ -89,7 +89,7 @@ else if (ViewBag.Type == "School")
             </p>
             <p>
                 <button type="submit" id="slUpload" class="btn btn-toolbar btn-success">
-                    <span class="glyphicon glyphicon-check"></span>
+                    <span class="glyphicon glyphicon-save"></span>
                 </button>
             </p>
         </div>
