--- a/SendMe/Views/Manage/Index.cshtml
+++ b/SendMe/Views/Manage/Index.cshtml
@@ -2,16 +2,21 @@
 
 @{
     ViewBag.Title = "Manage Profile";
+    ViewBag.UserName = User.Identity.Name;
 }
 
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div class="row">
-    <div class="col-sm-12 col-md-6">
+    <!----------------------------
+            Update Profile
+    ------------------------------>
+    <div class="col-sm-12 col-md-4">
         <h4>
             Update Your Profile
         </h4>
+        <p><a href="../send/@ViewBag.UserName">View Profile</a></p>
         <hr />
 
         @using (Html.BeginForm("UpdateProfile", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -25,10 +30,10 @@
                 <div class="col-md-10">
                     @Html.TextBoxFor(m => m.Item1.FirstName, new { @class = "form-control" })
                 </div>
-            </div>
 
-    <!--LastName-->
-            <div class="form-group">
+
+                <!--LastName-->
+
                 @Html.LabelFor(m => m.Item1.LastName, new { @class = "col-md-2 control-label" })
                 <div class="col-md-10">
                     @Html.TextBoxFor(m => m.Item1.LastName, new { @class = "form-control" })
@@ -49,30 +54,33 @@
                 <div class="col-md-10">
                     @Html.TextBoxFor(m => m.Item1.Speciality, new { @class = "form-control", id = "adminKey" })
                 </div>
-                <div id="adminErr"></div>
-            </div>
 
-    <!--Year-->
-            <div class="form-group">
+
+                <!--Year-->
+
                 @Html.LabelFor(m => m.Item1.Year, new { @class = "col-md-2 control-label" })
                 <div class="col-md-10">
                     @Html.TextBoxFor(m => m.Item1.Year, new { @class = "form-control", id = "adminKey" })
                 </div>
-                <div id="adminErr"></div>
-            </div>
 
-    <!--Submit-->
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" class="btn btn-default" value="Manage" />
+                <!--Submit-->
+                <div class="col-md-4">
+                    <button type="submit" id="profileSave" class="btn btn-toolbar btn-success">
+                        <span class="glyphicon glyphicon-check"></span>
+                    </button>
                 </div>
             </div>
+
         }
 
-
-
     </div>
-    <div class="col-sm-12 col-md-6">
+
+
+    <!----------------------------
+         Change Acct Settings
+    ------------------------------>
+
+    <div class="col-sm-12 col-md-2 col-lg-4">
         <h4>Change your account settings</h4>
         <hr />
         <dl class="dl-horizontal">
@@ -89,71 +97,74 @@
                 }
                 ]
             </dd>
-            <dt>Profile Photo:</dt>
+
+            <!----------------------------
+                Change Profile Pic
+            ------------------------------>
+            <dt><h4>Change Profile Photo:</h4></dt>
             <dd>
                 @Html.Partial("_Upload", new SendMe.Models.UploadViewModel())
             </dd>
-
             @*
-        <dt>External Logins:</dt>
-        <dd>
-            @Model.Item2.Logins.Count [
-            @Html.ActionLink("Manage", "ManageLogins") ]
-        </dd>
+                    <dt>External Logins:</dt>
+                    <dd>
+                        @Model.Item2.Logins.Count [
+                        @Html.ActionLink("Manage", "ManageLogins") ]
+                    </dd>
 
-            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
+                        Phone Numbers can used as a second factor of verification in a two-factor authentication system.
 
-             See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
+                         See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                            for details on setting up this ASP.NET application to support two-factor authentication using SMS.
 
-             Uncomment the following block after you have set up two-factor authentication
+                         Uncomment the following block after you have set up two-factor authentication
 
-        <dt>Phone Number:</dt>
-        <dd>
-            @(Model.Item2.PhoneNumber ?? "None")
-            @if (Model.Item2.PhoneNumber != null)
-            {
-                <br />
-                <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
-                }
-            }
-            else
-            {
-                <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
-            }
-        </dd>
+                    <dt>Phone Number:</dt>
+                    <dd>
+                        @(Model.Item2.PhoneNumber ?? "None")
+                        @if (Model.Item2.PhoneNumber != null)
+                        {
+                            <br />
+                            <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
+                            using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
+                            }
+                        }
+                        else
+                        {
+                            <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
+                        }
+                    </dd>
 
-    <dt>Two-Factor Authentication:</dt>
-    <dd>
-        <p>
-            There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-            for details on setting up this ASP.NET application to support two-factor authentication.
-        </p>
-        @if (Model.Item2.TwoFactor)
-            {
-                using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <text>Enabled
-                    <input type="submit" value="Disable" class="btn btn-link" />
-                    </text>
-                }
-            }
-            else
-            {
-                using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <text>Disabled
-                    <input type="submit" value="Enable" class="btn btn-link" />
-                    </text>
-                }
-            }
-    </dd>*@
+                <dt>Two-Factor Authentication:</dt>
+                <dd>
+                    <p>
+                        There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                        for details on setting up this ASP.NET application to support two-factor authentication.
+                    </p>
+                    @if (Model.Item2.TwoFactor)
+                        {
+                            using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <text>Enabled
+                                <input type="submit" value="Disable" class="btn btn-link" />
+                                </text>
+                            }
+                        }
+                        else
+                        {
+                            using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <text>Disabled
+                                <input type="submit" value="Enable" class="btn btn-link" />
+                                </text>
+                            }
+                        }
+                </dd>*@
         </dl>
     </div>
 </div>
