--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -74,6 +74,7 @@ else
     var currentTotal = @ViewBag.CurrentTotal;
 
 </script>
+<div id="map" style="width: 350px; height: 350px; border: 2px solid #3872ac;"></div>
 
 <div class="container">
     <div id="goal"></div>
