Updated Map with clickable info icons.

--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -74,7 +74,7 @@ else
     var currentTotal = @ViewBag.CurrentTotal;
 
 </script>
-<div id="map" style="width: 350px; height: 350px; border: 2px solid #3872ac;"></div>
+<div id="map" style="width: 350px; height: 350px; border: 2px solid #1abbac;"></div>
 
 <div class="container">
     <div id="goal"></div>
