--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -37,9 +37,8 @@
 </div>
 
 <!------------------------
-   Add Trip Btn & Modal
+   Active Trip
 ------------------------->
-
 @if (Model.ActiveTrip == null && ViewBag.userProfile == ViewBag.currentUser)
 {
     <h3>Add your trip!</h3>
@@ -51,18 +50,80 @@ else if (Model.ActiveTrip == null && ViewBag.userProfile != ViewBag.currentUser)
 }
 else
 {
-    <div class="row">
-        <div class="col-md-12">
+    <div class="row">       
+        <div id="editTrip">
+            @(Html.Action("RenderPartial", "Trip", new { trip = Model.ActiveTrip.Trip }))
+        </div>
+
+        <div class="col-md-12" id="tripDetails">
             <h3>@Model.ActiveTrip.Trip.Title</h3>
             <sub>@Model.ActiveTrip.Trip.Dates</sub>
             <p>
                 @Model.ActiveTrip.Trip.Desc
             </p>
-            <p>
+            <p id="attachMenu">
                 @Model.ActiveTrip.Trip.Destination <br />
                 $@Model.ActiveTrip.Trip.TargetAmnt
+
+                <!----------------------------------------
+                 Trip Menu Buttons
+                    http://codepen.io/apocheau/pen/EKeZgg
+                 ---------------------------------------->
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            @if (ViewBag.userProfile == ViewBag.currentUser)
+                            {
+                                <div class="btn-group-sm hidden" id="mini-fab">
+                                    <a href="../Donation/Payment?tripId=@Model.ActiveTrip.Trip.Id" 
+                                       class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Add Donation" title="" id="donate">
+                                        <i class="material-icons">
+                                            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                                <path fill="#1ABBAC" d="M11,4.5H13V15.5H11V4.5M13,17.5V19.5H11V17.5H13Z" />
+                                            </svg>
+                                        </i>
+                                    </a>
+                                    <a href="#" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Cancel" title="" id="cancel">
+                                        <i class="material-icons">
+                                            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                                <path fill="#1ABBAC" d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12C4,13.85 4.63,15.55 5.68,16.91L16.91,5.68C15.55,4.63 13.85,4 12,4M12,20A8,8 0 0,0 20,12C20,10.15 19.37,8.45 18.32,7.09L7.09,18.32C8.45,19.37 10.15,20 12,20Z" />
+                                            </svg>
+                                        </i>
+                                    </a>
+                                    <a href="#" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Edit" title="" id="edit">
+                                        <i class="material-icons">
+                                            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                                <path fill="#1ABBAC" d="M16.84,2.73C16.45,2.73 16.07,2.88 15.77,3.17L13.65,5.29L18.95,10.6L21.07,8.5C21.67,7.89 21.67,6.94 21.07,6.36L17.9,3.17C17.6,2.88 17.22,2.73 16.84,2.73M12.94,6L4.84,14.11L7.4,14.39L7.58,16.68L9.86,16.85L10.15,19.41L18.25,11.3M4.25,15.04L2.5,21.73L9.2,19.94L8.96,17.78L6.65,17.61L6.47,15.29" />
+                                            </svg>
+                                        </i>
+                                    </a>
+                                </div>
+                                <div class="btn-group">
+                                    <a href="javascript:void(0)" class="btn btn-fab" id="tripMenuMain">
+                                        <i class="material-icons">
+                                            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                                <path fill="#FFF" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+                                            </svg>
+                                        </i>
+                                    </a>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="btn-group">
+                                    <a href="../Donation/Payment?tripId=@Model.ActiveTrip.Trip.Id" class="btn btn-fab" id="donateMain">
+                                        <i class="material-icons">
+                                            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                                <path fill="#FFF" d="M11,4.5H13V15.5H11V4.5M13,17.5V19.5H11V17.5H13Z" />
+                                            </svg>
+                                        </i>
+                                    </a>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
             </p>
-            @Html.ActionLink("Donate", "Payment", "Donation", new { tripId = @Model.ActiveTrip.Trip.Id }, null)
         </div>
     </div>
 }
@@ -87,7 +148,6 @@ else
         Check Donations
     </button>
 
-
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -105,15 +165,15 @@ else
                         </p>
                         <p>
                             @if (donation.HaveThanked == false)
-                            {
+                    {
                                 @Ajax.ActionLink("Thank for Donation", "Index", new { donationId = donation.Id },
-                      new AjaxOptions
-                      {
-                          UpdateTargetId = "myModel",
-                          LoadingElementId = "progress",
-                          OnSuccess = "disablelink",
-                      },
-                 new { @class = "btn btn-success" })
+                    new AjaxOptions
+                    {
+                        UpdateTargetId = "myModel",
+                        LoadingElementId = "progress",
+                        OnSuccess = "disablelink",
+                    },
+                    new { @class = "btn btn-success" })
                             }
                         </p>
                     }
