--- a/SendMe/Views/Shared/_CreateTrip.cshtml
+++ b/SendMe/Views/Shared/_CreateTrip.cshtml
@@ -66,6 +66,11 @@
                         <span class="glyphicon glyphicon-check"></span>
                     </button>
                 </div>
+                <div class="col-md-4">
+                    <a href="@User.Identity.Name" class="btn btn-toolbar btn-danger">
+                        <span class="glyphicon glyphicon-ban-circle"></span>
+                    </a>
+                </div>
             </div>
         }
     </div>
