Added CustomAuthorizeAttribute to redirect unauthorized access to School management view.

--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -140,7 +140,8 @@ else
 </script>
 
 <div class="container">
-    <div id="goal"></div>
+    <div id="goal">
+    </div>
 </div>
 
 <!-----------Modal for donations------------->
