--- a/SendMe/Views/Shared/_CreateTrip.cshtml
+++ b/SendMe/Views/Shared/_CreateTrip.cshtml
@@ -1,7 +1,5 @@
 ﻿@model SendMe.Models.Trip
 
-<p>@ViewBag.Action</p>
-
 @if (ViewBag.userProfile == ViewBag.currentUser)
 {
     string action = (ViewBag.Action == null) ? "Update" : ViewBag.Action;
@@ -66,11 +64,14 @@
                         <span class="glyphicon glyphicon-check"></span>
                     </button>
                 </div>
+                @if (action == "Update")
+                {
                 <div class="col-md-4">
                     <a href="@User.Identity.Name" class="btn btn-toolbar btn-danger">
                         <span class="glyphicon glyphicon-ban-circle"></span>
                     </a>
                 </div>
+                }
             </div>
         }
     </div>
