Fixed issue with progress bar

--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -131,8 +131,8 @@ else
 
 <!-----------Progress bar------------->
 <script type="text/javascript">
-    var targetAmount = @ViewBag.TargetAmount;
-    var currentTotal = @ViewBag.CurrentTotal;
+    var targetAmount = '@ViewBag.TargetAmount';
+    var currentTotal = '@ViewBag.CurrentTotal';
 </script>
 <div class="container">
     <div id="goal"></div>
