Fixed issue with Progress bar

--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -154,8 +154,8 @@ else
 <!-----------Progress bar------------->
 <script type="text/javascript">
 
-    var targetAmount = @ViewBag.TargetAmount;
-    var currentTotal = @ViewBag.CurrentTotal;
+    var targetAmount = '@ViewBag.TargetAmount';
+    var currentTotal = '@ViewBag.CurrentTotal';
 
 </script>
 
